# Ruminate

./: .gitignore  README.md  ROADMAP.md  ast.rs  build.sh  css.ui.md  gnql.js  graze.sublime-project  index.html  indigo-core.sublime-color-scheme  notes.json  notes.md  package-lock.json  package.json  parser_data.rs  reduce_tree.js  ruminate.md  ruminate.sublime-project  tasks.md
app/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json
app/site/: index.wick
app/site/web/: index.wick
app/src/: app.rs  bridge.rs  globals.rs  index.wick  main-temp.rs  main.rs  store.rs
app/src-site/: index.wick  test.html
app/src-site/components/: intro.wick
app/src-site/css/: font.css  icon.css  style.css
app/src-site/ts/: app.ts  cache.ts  constants.ts  crud.ts  store.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/globals/: mod.rs
app/src/integrate/: mod.rs
app/src/store/: mod.rs
app/src/tests/: mod.rs  scan_tests.rs
app/src/ts/: app.ts  ast.ts  bridge.ts  diff.ts  listeners.ts  parse_markdown.ts  parser_data.ts  sections.ts  text_handler.ts
app/tests/: scan_tests.rs
apps/electron/: index.html  main.js  runtime.js
apps/electron/components/: inline-body.html  list.html  main.html  note.html  note_body.html  note_header.html
apps/electron/css/: graze.css
codelite/: Makefile  codelite.workspace
codelite/.codelite/: codelite.session  compilation.db  compile_commands.json  refactoring.db
codelite/ruminate_base/: ruminate_base.mk  ruminate_base.project  ruminate_base.txt
codelite/ruminate_base/Debug/: ruminate_base  up_up_source_cpp_compiler_gnql_cpp.cpp.o.d  up_up_source_cpp_compiler_parse_buffer.cpp.o.d  up_up_source_cpp_compiler_parser.cpp.o.d  up_up_source_cpp_database_base.cpp.o.d  up_up_source_cpp_database_file_db.cpp.o.d  up_up_source_cpp_js_entry.cpp.o.d  up_up_source_cpp_main.cpp.o.d  up_up_source_cpp_note_note.cpp.o.d  up_up_source_cpp_query_query.cpp.o.d  up_up_source_cpp_string_crdt.cpp.o.d  up_up_source_cpp_tags_tag.cpp.o.d  up_up_source_cpp_tags_tags.cpp.o.d
codelite/ruminate_base/src/: note_base.h
crates/lib/: Cargo.toml  README.md
crates/lib/grammar/: query.hcg
crates/lib/src/: lib.rs
crates/lib/tests/: placeholder_test.rs
crates/web-prototype/: Cargo.toml  index.html  index.wick
crates/web-prototype/grammar/: ruminate_formatter.hcg
crates/web-prototype/source/: main.rs
crates/web-prototype/web/assets/js/: formatting_parser.js  text_handler.js
crates/web-prototype/web/components/note/: data.wick
data/docs/: outline_deisgn.md  outline_design.md
data/notes/: note.md
data/test/: loc_film_registry.data.json  us_2018_pop_estimate.data.json
docs/todo/: store.json  todo.wick
eclipse/: .cproject  .project
grammar/: md.hcg  query.hcg  ruminate_formatter.hcg  ruminate_markdown.hcg
guide/: note.md
ide/codelite/: .ninja_deps  .ninja_log  CMakeCache.txt  Compiler.project  Database.project  FileDB.project  Makefile  build.ninja  cmake_install.cmake  rules.ninja  ruminate  ruminate.project  ruminate.workspace
ide/codelite/.codelite/: cppcheck.list  refactoring.db  ruminate.session  ruminate.workspace.anthony
ide/eclipse/: .cproject  .ninja_deps  .ninja_log  .project  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  ruminate
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/container/: mod.rs
lib/src/primitives/: binary.rs  container.rs  mod.rs  note.rs
lib/src/query/: ast.rs  ast.ts  mod.rs  parser.rs  parser_data.rs  parser_data.ts  query.rs
lib/src/store/: container.rs  mod.rs  store.rs  tag.rs
lib/src/store_fs/: mod.rs
lib/tests/: placeholder_test.rs
scripts/debian/: build_crdt.sh  build_wasm.sh  install_dev_dependencies.sh  install_emscripten.sh
source/: README.md  front_end.js  graze.js  ruminate.js
source/apps/electron/: index.html  (+2 more)
source/common/: container.js  fuzzy.js  note.js  option.js  serialization.js  symbols.js  uid.js
source/compiler/: gnql.js  junction.js  reduce_tree.js
source/cpp/: CMakeLists.txt  crdt.asm.js  crdt.asm.wasm  crdt.asm.wasm.map  crdt.cpp  crdt.wasm.js  crdt.wasm.wasm  crdt.wasm.wasm.map  definitions.h  js_entry.cpp  main.cpp
source/cpp/compiler/: .gnql_cpp.h.swp  command_nodes.h  command_string.cpp.cpp  command_string.cpp.h  compiler.h  gnql_cpp.cpp  gnql_cpp.h  main.cpp  main.ll  node.h  node_utils.h  nodes.h  note_nodes.h  parse_buffer.h  parser.cpp  parser.h  query_nodes.h  sb_tokenizer.h  test  tokenizer.h  uid_nodes.h
source/cpp/container/: container.h
source/cpp/database/: base.h  file_db.h
source/cpp/database/file/: file_db.h
source/cpp/database/include/: base.h  database.cpp  db_runner.h
source/cpp/localization/: en_us_strings.cpp
source/cpp/note/: id.cpp  id.h  include.h  note.basic.cpp  note.basic.h  note.cpp  note.crdt.h  note.h  note_include.cpp  note_include.h
source/cpp/note/id/: id.cpp  id.h
source/cpp/note/tags/: tag_value.h  tags.cpp  tags.h
source/cpp/note/uid/: uid.cpp  uid.h
source/cpp/query/: container.h  filter.h  query.h  query_result.h
source/cpp/server/: server.h
source/cpp/string/: crdt.cpp  crdt.h  opid.h  search.h  utf.h
source/cpp/tags/: tag.cpp  tag_value.h  tags.cpp  tags.h
source/cpp/text_command/: text_command.cpp  text_command.h  text_command_result.cpp  text_command_result.h  text_command_result_codes.h
source/cpp/ui/: cli.cpp  cli.h
source/cpp/uid/: uid.cpp  uid.h
source/cpp/utils/: stream.h
source/grammar/: README.md  command_string.cpp.hcg  gnql.cpp.hcg  gnql.hcg  gnql_cpp.hcg  junction.hcg  note.cpp.hcg  query_string.cpp.hcg  reduce_tree.hcg  uid.cpp.hcg
source/graze/: graze.js
source/js/: ruminate.js
test/: common.js  markdom_test.js  note_test.js  server_test.js  test.js  utility_test.js
test/data/: README.md  data_builder.js  library_of_congress_film_registry_essay.txt  loc_film_registry.data.json  war_and_peace.data.json  war_and_peace.formatted.txt
test/js/: markdom_test.js  test.js
workspace/: ruminate.code-workspace  ruminate.sublime-project
(+240 files in other folders)
