[package]
name = "ruminate-prototype"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "source/main.rs"

[dependencies]
js-sys = "0.3.52"
wasm-bindgen = "0.2.75"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
