[package]
name = "ruminate-prototype"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "source/main.rs"

[dependencies]
js-sys = "0.3.52"
wasm-bindgen = "0.2.75"
lib-ruminate = { path = "../lib/" }
getrandom = { version = "0.2.3", features = ["js"] }

[dependencies.web-sys]
version = "0.3.52"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  "console"
]

